# Smiley

./: .gitignore  CONTRIBUTING.md  INSTALL-MAC.md  LEGAL.md  LICENSE  NOTICE  PLATFORM-UPGRADE.md  PRIVACY.md  PROJECT-STRUCTURE.md  README-MOBILE.md  README-NATIVE.md  README.md  RELEASE_UPLOAD.md  SECURITY.md  STRUCTURE.md  ToS.md  build-native-all.sh  build-native.ps1  build-native.sh  config.example.json  discord.app.example.json  discord.app.json  downloads.registry.example.json  llms.txt  main.js  manifest.json  package-lock.json  package.json  preload.js
.github/: CODEOWNERS  FUNDING.yml  SOCIAL_PREVIEW.md
Smiley.Native/: Activities.json  App.axaml  App.axaml.cs  Program.cs  Smiley.Native.csproj  ViewLocator.cs  app.manifest  appsettings.json
Smiley.v12/: .gitignore  README.md  package-lock.json  package.json
Smiley.v12/src-tauri/: Cargo.toml  downloads.registry.example.json  tauri.conf.json
Smiley.v12/src-tauri/src/: app.rs  config.rs  discord.rs  error.rs  gaming.rs  install_registry.rs  install_telemetry.rs  lib.rs  log_file.rs  main.rs  models.rs  music.rs  music_linux.rs  music_mediaremote.rs  privacy.rs  riot.rs  tenor.rs  updates.rs  valorant_assets.rs
Smiley.v8/: README.md  package-lock.json  package.json
Smiley.v8/src-tauri/: Cargo.toml  tauri.conf.json
Smiley.v8/src-tauri/capabilities/: default.json
Smiley.v8/src-tauri/src/: activities.rs  app.rs  config.rs  discord.rs  gaming.rs  lib.rs  log_file.rs  models.rs  music.rs  music_linux.rs  music_mediaremote.rs  privacy.rs  riot.rs  valorant_assets.rs  valorant_catalog.rs
docs/: ABOUT.md  CHANGELOG.md  CODE-TOUR.md  FINAL.md  INSTALL-DATABASE.md  MINIMUM-REQUIREMENTS.md  NOTARIZATION.md  RELEASE_BODY_TEMPLATE.md  RELEASING-NATIVE.md  RELEASING-V12-SIGNING.md  RELEASING-V8-SIGNING.md  RELEASING.md  SETUP-GITHUB.md
electron/: README.md  coding-sync.js  game-api.js  game-assets.js  game-sync.js  install-registry.js  install-telemetry.js  mac-mediaremote.js  music-sync.js  now-coding.js  now-gaming-mac.jxa.js  now-gaming.js  now-playing-mac.jxa.js  now-playing.js  presence-builder.js  riot-client.js  security.js  valorant-catalog.js  valorant-local.js
mobile/: README.md  capacitor.config.json  package-lock.json  (+3 more)
(+264 files in other folders)
